opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_smtp"
bug-reports: "https://github.com/janestreet/async_smtp/issues"
dev-repo: "git+https://github.com/janestreet/async_smtp.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_smtp/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "async_extra"
  "async_inotify"
  "async_log"
  "async_sendfile"
  "async_shell"
  "async_ssl"
  "babel"
  "bin_prot"
  "core"
  "core_kernel"
  "core_unix"
  "email_message"
  "ppx_jane"
  "ppx_stable"
  "re2"
  "resource_cache"
  "sexp_macro"
  "streamable"
  "textutils"
  "angstrom"       {>= "0.15.0"}
  "base64"         {>= "3.4.0"}
  "cryptokit"      {>= "1.16" & < "1.17"}
  "dune"           {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "SMTP client and server"
description: "
"
